--- a/study/220316.ipynb
+++ b/study/220316.ipynb
@@ -113,10 +113,11 @@
     "else :\n",
     "    # num * money >= price\n",
     "    # num >= price/money\n",
-    "    if price%money == 0:\n",
-    "        print(price/money)\n",
-    "    else :\n",
-    "        print(price//money + 1)"
+    "    # if price%money == 0:\n",
+    "    #     print(price/money)\n",
+    "    # else :\n",
+    "    #     print(price//money + 1)\n",
+    "    print(price//money + 1)"
    ]
   },
   {
