--- a/study/220321.ipynb
+++ b/study/220321.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "4d6c60c6",
+   "id": "989eeab8",
    "metadata": {},
    "source": [
     "### Coding Test 대비 6일차"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "63f338f3",
+   "id": "2c428b37",
    "metadata": {},
    "source": [
     "baekjoon > 1284"
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6279bc1b",
+   "id": "49b22bc5",
    "metadata": {},
    "source": [
     "재석이는 대문에 붙이는 (주소를 나타내는) 호수판 제작업체의 직원이다. 고객에게 전달할 호수판은 숫자와 숫자 사이 그리고 왼쪽 오른쪽으로 적당히 여백이 들어가 줘야하고 숫자마다 차지하는 간격이 조금씩 상이하다. 다행이도 규칙은 매우 간단하다. \n",
@@ -35,7 +35,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "75acc280",
+   "id": "0100cf02",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ffb7fec8",
+   "id": "3651621d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bb92398f",
+   "id": "de7289c0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +65,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "0d3950ef",
+   "id": "f5b10cc4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +84,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "3996cd4d",
+   "id": "5cf95089",
    "metadata": {},
    "outputs": [
     {
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "05e6f6ef",
+   "id": "69dde8ca",
    "metadata": {},
    "source": [
     "baekjoon > 1009"
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "33606327",
+   "id": "b31227f4",
    "metadata": {},
    "source": [
     "재용이는 최신 컴퓨터 10대를 가지고 있다. 어느 날 재용이는 많은 데이터를 처리해야 될 일이 생겨서 각 컴퓨터에 1번부터 10번까지의 번호를 부여하고, 10대의 컴퓨터가 다음과 같은 방법으로 데이터들을 처리하기로 하였다.\n",
@@ -127,7 +127,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "8af41483",
+   "id": "5a897767",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,16 +137,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "a1149b9b",
+   "execution_count": 23,
+   "id": "f6274492",
    "metadata": {},
    "outputs": [],
    "source": [
     "def solution(a, b):\n",
+    "    num = a\n",
     "    if a == 1:\n",
     "        return 1\n",
-    "    "
+    "    for i in range(1,b):\n",
+    "        num = int(str(num * a)[-1])\n",
+    "    return (10 if num == 0 else num)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "4737e660",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "9"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "solution(9, 635)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "47ca51ef",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
