--- a/study/220328.ipynb
+++ b/study/220328.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "47229715",
+   "id": "372f0e66",
    "metadata": {},
    "source": [
     "프로그래머스 > 레벨1 > KAKAO 신고결과 받기\n",
@@ -19,7 +19,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "0374e703",
+   "id": "0c5ea456",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,8 +28,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "f57d2a8d",
+   "execution_count": 43,
+   "id": "ff4b37e7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "67f55dab",
+   "id": "0df06f85",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "27629283",
+   "id": "c887c777",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +85,8 @@
     "    # 각 사용자들이 신고한 유저 저장 리스트 ( 중복 제외 )\n",
     "    for r in report_list:\n",
     "        user_report_list[id_dic[r[0]]].add(r[1])\n",
-    "\n",
+    "    \n",
+    "    # itertools.chain을 사용해서 user_report_list 각각의 원소들을 연결한 list 생성\n",
     "    user_report_list_chain = list(itertools.chain(*user_report_list))\n",
     "\n",
     "    # 만들어둔 report 저장 list에 report된 횟수만큼 저장\n",
@@ -111,7 +112,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "6d76207a",
+   "id": "ecd6f985",
    "metadata": {},
    "outputs": [
     {
@@ -130,9 +131,71 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "989384b2",
+   "metadata": {},
+   "source": [
+    "**다른 사람들의 코드**\n",
+    "<배운거>\n",
+    "- list.index('원소명') : 리스트 내에서 특정 원소가 몇번째 처음으로 등장하는지 알려주는 함수"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "a4aaf786",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def solution(id_list, report, k):\n",
+    "    answer = [0] * len(id_list)    \n",
+    "    reports = {x : 0 for x in id_list}\n",
+    "\n",
+    "    # for 문을 만들 때 set(report)를 사용해서 각 사용자별 똑같은 report message 제거\n",
+    "    # reports set에 이름별로 set을 만들어서 몇번 report되었는지 확인\n",
+    "    for r in set(report):\n",
+    "        reports[r.split()[1]] += 1\n",
+    "\n",
+    "    #\n",
+    "    for r in set(report):\n",
+    "        if reports[r.split()[1]] >= k:\n",
+    "            answer[id_list.index(r.split()[0])] += 1\n",
+    "\n",
+    "    return answer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "0624babe",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'muzi': 1, 'frodo': 2, 'apeach': 0, 'neo': 2}\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[2, 1, 1, 0]"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "solution(id_list, report, k)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "36946b81",
+   "id": "a471cf88",
    "metadata": {},
    "outputs": [],
    "source": []
