--- a/study/220328.ipynb
+++ b/study/220328.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "372f0e66",
+   "id": "9b3a7938",
    "metadata": {},
    "source": [
     "프로그래머스 > 레벨1 > KAKAO 신고결과 받기\n",
@@ -19,7 +19,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "0c5ea456",
+   "id": "89e2b038",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "ff4b37e7",
+   "id": "c6f8d535",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "0df06f85",
+   "id": "6db43a94",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "c887c777",
+   "id": "9bf8c41b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,7 +112,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "ecd6f985",
+   "id": "c4c02de1",
    "metadata": {},
    "outputs": [
     {
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "989384b2",
+   "id": "ec10348c",
    "metadata": {},
    "source": [
     "**다른 사람들의 코드**\n",
@@ -142,8 +142,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
-   "id": "a4aaf786",
+   "execution_count": 48,
+   "id": "a79d70dc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,7 +156,7 @@
     "    for r in set(report):\n",
     "        reports[r.split()[1]] += 1\n",
     "\n",
-    "    #\n",
+    "    # reports에 신고한 유저가 들어있다면, answer에 보내줄 message +1 해줌\n",
     "    for r in set(report):\n",
     "        if reports[r.split()[1]] >= k:\n",
     "            answer[id_list.index(r.split()[0])] += 1\n",
@@ -166,36 +166,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
-   "id": "0624babe",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'muzi': 1, 'frodo': 2, 'apeach': 0, 'neo': 2}\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "[2, 1, 1, 0]"
-      ]
-     },
-     "execution_count": 47,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "solution(id_list, report, k)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
-   "id": "a471cf88",
+   "id": "2bb991ed",
    "metadata": {},
    "outputs": [],
    "source": []
